--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,7 @@ body {
     --sidebar-accent-foreground: 210 40% 98%;
     --sidebar-border: 222 47% 18%;
     --sidebar-ring: 213 88% 42%;
+    --summary-background: 215 83% 72%;
   }
   .dark {
     --background: 222 47% 11%;
@@ -75,6 +76,7 @@ body {
     --sidebar-accent-foreground: 210 40% 98%;
     --sidebar-border: 222 47% 18%;
     --sidebar-ring: 213 88% 42%;
+    --summary-background: 215 83% 72%;
   }
 }
 
